--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://kit.fontawesome.com/34229d98c9.js" crossorigin="anonymous"></script>
     <title>Learn School</title>
   </head>
   <body>
